<resources>
    <string name="app_name">Github User</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="search_hint">Search Username</string>
    <string name="username">Username</string>
    <string name="name_of_user">Name of User</string>
    <string name="tv_user_follower">User Follower</string>
    <string name="tv_user_following">User Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_title_1">FOLLOWER</string>
    <string name="tab_title_2">FOLLOWING</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="empty_result">Username Not Found</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="empty_favorite">You don\'t have any favorite users</string>
</resources>